@@ -2,6 +2,7 @@
 1.2
 - use setting "mount_turn_player_look" instead of "whinny.enable_mouse_ctrl"
 - used proper method for setting rotation compensation between rider & horse
+- added localization support
 
 
 1.1
